--- a/rwis.ipynb
+++ b/rwis.ipynb
@@ -7,12 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!/usr/bin/env python\n",
-    "# coding: utf-8\n",
-    "\n",
-    "# In[10]:\n",
-    "\n",
-    "\n",
     "import datetime\n",
     "import re\n",
     "import math\n",
@@ -417,6 +411,7 @@
     "                els = line2.split(',')\n",
     "                for r in range(0,len(els)):\n",
     "                    el = els[r]\n",
+    "                    print(els)\n",
     "                    if \"Id\" in el:\n",
     "                        ID = self.split_colon(el)\n",
     "                        if ID in self.stations:\n",
@@ -506,25 +501,9 @@
     "#  input - filepath to rwis data file\n",
     "# output - filepath to created placefile\n",
     "\n",
-    "doit = RWIS('midotmet.dat','C:/data/vps_local/public/placefiles/rwis.txt')\n",
+    "doit = RWIS('/cips/RWIS/midotmet.dat','/home/www/html/soo/rwis.txt')\n",
     "# --------------------------------------------------------"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f9d511b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "941f36a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
